better handling for multiple occurences